--- a/ajiva/ajiva.csproj
+++ b/ajiva/ajiva.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="GlmSharp" Version="0.9.8.0" />
         <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
         <PackageReference Include="System.Linq.Async" Version="5.0.0" />
+        <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
