--- a/ajiva/ajiva.csproj
+++ b/ajiva/ajiva.csproj
@@ -48,6 +48,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\ajiva.Ecs\ajiva.Ecs.csproj" />
+        <ProjectReference Include="..\lib\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
         <ProjectReference Include="..\lib\ajiva-utils\src\Ajiva.Wrapper\Ajiva.Wrapper.csproj" />
         <ProjectReference Include="..\SharpVk\src\SharpVk.Emit\SharpVk.Emit.csproj" />
         <ProjectReference Include="..\SharpVk\src\SharpVk.Glfw\SharpVk.Glfw.csproj" />
@@ -60,6 +62,7 @@
     <ItemGroup>
       <Compile Remove="Systems\VulcanEngine\SpirV-ShaderHelper\VertexOutput.cs" />
       <Compile Remove="Systems\VulcanEngine\Layer2d\UiRenderer.cs" />
+      <Compile Remove="Components\RenderAble\RenderRect2D.cs" />
     </ItemGroup>
 
     <ItemGroup>
