removed / changed paths in project files

--- a/ajiva.Ecs/ajiva.Ecs.csproj
+++ b/ajiva.Ecs/ajiva.Ecs.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\lib\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
+      <ProjectReference Include="..\libs\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
     </ItemGroup>
 
 </Project>
