--- a/ajiva/ajiva.csproj
+++ b/ajiva/ajiva.csproj
@@ -55,8 +55,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\ajiva.Ecs\ajiva.Ecs.csproj" />
-        <ProjectReference Include="..\lib\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
-        <ProjectReference Include="..\lib\ajiva-utils\src\Ajiva.Wrapper\Ajiva.Wrapper.csproj" />
+        <ProjectReference Include="..\libs\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
+        <ProjectReference Include="..\libs\ajiva-utils\src\Ajiva.Wrapper\Ajiva.Wrapper.csproj" />
         <ProjectReference Include="..\SharpVk\src\SharpVk.Emit\SharpVk.Emit.csproj" />
         <ProjectReference Include="..\SharpVk\src\SharpVk.Glfw\SharpVk.Glfw.csproj" />
         <ProjectReference Include="..\SharpVk\src\SharpVk.Shanq.GlmSharp\SharpVk.Shanq.GlmSharp.csproj" />
