--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "SharpVk"]
-	path = libs/SharpVk
-	url = git@github.com:xuri02/SharpVk.git
 [submodule "libs/ajiva-utils"]
 	path = libs/ajiva-utils
 	url = git@github.com:ajiva-group/ajiva-utils.git
+[submodule "libs/SharpVk"]
+	path = libs/SharpVk
+	url = git@github.com:xuri02/SharpVk.git
