Update Readme / gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+# c#
 bin/
 obj/
-/packages/
+packages/
+
+# rider / reshaper
 riderModule.iml
-/_ReSharper.Caches/
+_ReSharper.Caches/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -21,3 +24,11 @@ riderModule.iml
 
 # ignore all ueer files
 *.user
+
+# visual studio
+.vs
+
+# vs-code
+.history
+.vscode
+.code
