--- a/src/ajiva.Ecs/ajiva.Ecs.csproj
+++ b/src/ajiva.Ecs/ajiva.Ecs.csproj
@@ -8,4 +8,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\libs\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
     </ItemGroup>
+    <PropertyGroup>
+        <PathMap>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))=./</PathMap>
+    </PropertyGroup>
 </Project>
