--- a/src/ajiva.Ecs/ajiva.Ecs.csproj
+++ b/src/ajiva.Ecs/ajiva.Ecs.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\libs\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
+        <ProjectReference Include="..\ajiva.generator\ajiva.generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
     <PropertyGroup>
         <PathMap>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))=./</PathMap>
