--- a/src/ajiva/ajiva.csproj
+++ b/src/ajiva/ajiva.csproj
@@ -14,9 +14,8 @@
     <ItemGroup>
         <ProjectReference Include="..\..\libs\ajiva-utils\src\Ajiva.Include\Ajiva.Include.csproj" />
         <ProjectReference Include="..\..\libs\ajiva-utils\src\Ajiva.Wrapper\Ajiva.Wrapper.csproj" />
-        <ProjectReference Include="..\..\libs\GlmSharp\GlmSharp\GlmSharp\GlmSharp.csproj" />
         <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk.Glfw\SharpVk.Glfw.csproj" />
-        <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk.Shanq.GlmSharp\SharpVk.Shanq.GlmSharp.csproj" />
+        <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk.Shanq.Numerics\SharpVk.Shanq.Numerics.csproj" />
         <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk\SharpVk.csproj" />
         <ProjectReference Include="..\ajiva.Ecs\ajiva.Ecs.csproj" />
     </ItemGroup>
