Asset System now uses Configuration

--- a/src/ajiva.application/appsettings.json
+++ b/src/ajiva.application/appsettings.json
@@ -1,4 +1,16 @@
 ﻿{
+  "Ajiva": {
+    "Window": {
+      "Width": 1600,
+      "Height": 1200,
+      "PosX": 200,
+      "PosY": 300
+    },
+    "ShaderConfig": {
+      "TEXTURE_SAMPLER_COUNT": 128
+    },
+    "AssetPath": "Assets/default.asset"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
@@ -11,14 +23,14 @@
         "Args": {
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
-          "path": "Logs/ajiva-engine.txt",
+          "path": "Logs/Ajiva-engine.txt",
           "outputTemplate": "{Timestamp:o}|{Level:u3}|({ThreadId}/{ThreadName})|{SourceContext}|{Message}|{Exception}{NewLine}"
         }
       },
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} [{Level:u3}#{ThreadId}] {SourceContext} ({Caller})] {Message:lj}{NewLine}{Exception}",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} [{Level:u3}#{ThreadId}] {SourceContext} ({Caller})] {Message:lj}{NewLine}{Exception}"
           //"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
         }
       }
