--- a/src/Ajiva.Application/Appsettings.json
+++ b/src/Ajiva.Application/Appsettings.json
@@ -30,19 +30,13 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} [{Level:u3}#{ThreadId}] {SourceContext} ({Caller})] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} [{Level:u3}]#{ThreadId,2} {Caller}] {Message:lj}{NewLine}{Exception}"
           //"theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"
         }
       }
     ],
     "Enrich": [
       "FromLogContext",
-      {
-        "Name": "WithCaller",
-        "Args": {
-          "includeFileInfo": false
-        }
-      },
       "WithMachineName",
       "WithThreadId"
     ],
