--- a/src/Ajiva/Ajiva.csproj
+++ b/src/Ajiva/Ajiva.csproj
@@ -6,7 +6,6 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="protobuf-net" Version="3.0.101" />
         <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
         <PackageReference Include="System.Linq.Async" Version="5.0.0" />
         <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
@@ -15,6 +14,7 @@
         <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk.Glfw\SharpVk.Glfw.csproj" />
         <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk.Shanq.Numerics\SharpVk.Shanq.Numerics.csproj" />
         <ProjectReference Include="..\..\libs\SharpVk\src\SharpVk\SharpVk.csproj" />
+        <ProjectReference Include="..\Ajiva.Assets\Ajiva.Assets.csproj" />
         <ProjectReference Include="..\Ajiva.Ecs\Ajiva.Ecs.csproj" />
     </ItemGroup>
     
