--- a/src/Ajiva.Utils/Ajiva.Utils.csproj
+++ b/src/Ajiva.Utils/Ajiva.Utils.csproj
@@ -5,10 +5,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Ajiva.Utils</RootNamespace>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Serilog" Version="2.12.0"/>
+        <PackageReference Include="Serilog" Version="2.12.0" />
     </ItemGroup>
 
 </Project>
