--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,19 +12,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: recursive
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 7.0.x
     - name: Restore dependencies
-      working-directory: ./src/ajiva
+      working-directory: ./src/Ajiva.Application
       run: dotnet restore
     - name: Build
-      working-directory: ./src/ajiva
+      working-directory: ./src/Ajiva.Application
       run: dotnet build --no-restore
     - name: Test
-      working-directory: ./src/ajiva.Test
-      run: dotnet test --no-build --verbosity normal
+      working-directory: ./src/Ajiva.Test
+      run: dotnet test --verbosity normal
